cache tokens with eviction. improve error messages. fallback to git.oauth